<resources>
    <string name="app_name">Quot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quote">Quote</string>
    <string name="author"> Author</string>
    <string name="book"> Book</string>
    <string name="next"> Next</string>
    <string name="denemeText">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.

</string>

</resources>