<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.quot.ui.viewModels.QuoteViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.fragments.InfoFragment">

        <TextView
            android:id="@+id/titleQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quoteText"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleQuote"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quoteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.state.quote}"
                tools:text="@string/denemeText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titleAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quoteText"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authorText"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleAuthor"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/titleBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authorText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bookText"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/titleBook"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/bookText"
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>